cs3310/Assignment 2/submission/test/pass/Test_4.java
class Test4{
    public static void main(String[] a){
        System.out.println(1);
    }
}

class Finder {
    public int Find(int a,int num){
        while(true){
	}
	return 0;
    }
}
