cs3310/Assignment 2/submission/test/fail/Test_2d.java
class Test2d{
    public static void main(String[] a){
        System.out.println(1);
    }
}

//int is a basic type and not an object
class Finder {
    public int Find(int a,int num){
        int i;
	Aux aux1;
	Aux aux2;
	//aux1 = new Aux();
	//aux2 = new Aux();
	aux1 = a;
	return 0;
    }
}

class Aux {
    int x; 

}
